code/human_written_tests/WebAssembly/processed_control_flow_validation/test_block_160.wast
(assert_invalid
  (module (func $type-param-void-vs-nums
    (block (param i32 f64) (drop) (drop))
  ))
  "type mismatch"
)